--- a/Forms.html
+++ b/Forms.html
@@ -46,7 +46,7 @@
 
 		<br><br>
 
-		<label for="cor">Cor do uniforme</label><br>
+		<label for="cor">Cores de efeito do uniforme</label><br>
 		<input type="color" name="corUniforme" id="corUniforme">
 
 		<br><br>
